# TP-Taller-FIUBA-1C2026-Argentum

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  uninstall.sh
client/: CMakeLists.txt  client__.cpp  client__.h  client_business.cpp  client_business.h  client_data.h  client_game_loop.cpp  client_game_loop.h  client_manager.cpp  client_manager.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  entidad_renderizable.h  handshake_error.h  main.cpp  pantallaLogin.cpp  pantallaLogin.h  registro_cliente.cpp  registro_cliente.h
client/Qt/: cargarPersonaje.qml  cargarPersonajeController.cpp  cargarPersonajeController.h  conectionController.cpp  conectionController.h  datosConexion.h  elegirPersonaje.qml  elegirPersonajeController.cpp  elegirPersonajeController.h  gestor_audio_menu.cpp  gestor_audio_menu.h  login.qml  loginController.cpp  loginController.h  menuController.cpp  menuController.h  resources.qrc
client/Qt/cargarPersonaje/: cargarPersonaje.qml  cargarPersonajeController.cpp  cargarPersonajeController.h
client/Qt/elegirPersonaje/: elegirPersonaje.qml  elegirPersonajeController.cpp  elegirPersonajeController.h
client/Qt/login/: login.qml  loginController.cpp  loginController.h
client/assets/: character_renderer.cpp  character_renderer.h  character_sprite_resolver.cpp  character_sprite_resolver.h  client_game_world.cpp  client_game_world.h  client_renderer.cpp  client_renderer.h  criatura_renderer.cpp  criatura_renderer.h  criatura_sprite_resolver.cpp  criatura_sprite_resolver.h  estado_chat_render.h  estado_panel_render.h  npc_renderer.cpp  npc_renderer.h  npc_sprite_resolver.cpp  npc_sprite_resolver.h  object_animation.cpp  object_animation.h  sprite_catalog.cpp  sprite_catalog.h  sprite_manager.cpp  sprite_manager.h  text_renderer.cpp  text_renderer.h
client/audio/: gestor_audio.cpp  gestor_audio.h
client/camara/: player_camera.cpp  player_camera.h
client/config/: cargador_nombres_item.cpp  cargador_nombres_item.h  catalogo_items.cpp  catalogo_items.h  config_cliente.h  lector_config_cliente.cpp  lector_config_cliente.h
client/handlers/: client_input_handler.cpp  client_input_handler.h  parser_comando_chat.cpp  parser_comando_chat.h
client/interface/: client_game_world.cpp  client_game_world.h  object_animation.h  sprite_manager.cpp  sprite_manager.h  texture_cache.cpp  texture_cache.h
client/interface/renderer/: character_renderer.cpp  character_renderer.h  client_renderer.cpp  client_renderer.h  criatura_renderer.cpp  criatura_renderer.h  estado_chat_render.h  estado_panel_render.h  npc_renderer.cpp  npc_renderer.h  text_renderer.cpp  text_renderer.h
client/interface/sprites/: catalog_resources.h  sprite_catalog.cpp  sprite_catalog.h  sprite_catalog_helper.cpp  sprite_catalog_helper.h  sprite_catalog_parser.cpp  sprite_catalog_parser.h
client/protocolo/: protocolo_cliente.cpp  protocolo_cliente.h
client/red/: conexion_servidor.cpp  conexion_servidor.h  emisor.cpp  emisor.h  receptor.cpp  receptor.h
cmake/: CompilerWarnings.cmake
common/: CMakeLists.txt
common/game/: aleatorio.cpp  aleatorio.h  constant_rate_loop.cpp  constant_rate_loop.h  criatura.cpp  criatura.h
common/game/mapa/: mapa.h  (+4 more)
common/mensajes/: codigo_error_accion.h  codigo_error_audio.h  codigo_error_cliente.h  codigo_error_persistencia.h  codigo_error_protocolo.h  mensajes_error_accion.cpp  mensajes_error_accion.h  mensajes_error_audio.cpp  mensajes_error_audio.h  mensajes_error_cliente.cpp  mensajes_error_cliente.h  mensajes_error_persistencia.cpp  mensajes_error_persistencia.h  mensajes_error_protocolo.cpp  mensajes_error_protocolo.h
common/persistencia/: catalogo_criaturas.cpp  catalogo_criaturas.h  error_persistencia.cpp  error_persistencia.h  escritor_mapa.cpp  escritor_mapa.h  firma_mapa.h  formato_jugador.h  formato_mapa.h  lector_mapa.cpp  lector_mapa.h  vinculo_mazmorra.h
common/protocolo/: categoria_chat.h  comando_jugador.h  dato_sesion_cliente.h  estado_entidad.h  mensaje_servidor.h  opcode.h  protocolo.cpp  protocolo.h  tipo_entidad.h  tipo_golpe.h
common/socket/: liberror.cpp  liberror.h  resolver.cpp  resolvererror.h  socket.cpp
common/thread/: queue.h  thread.h
config/: client_config.toml  criaturas.toml  elementos.toml  game_config.toml  mapa.mazmorra.toml  mapa.toml  pisos.toml
doc/: Camara.md  CorreccionesGameloop.md  DecisionesDeDisenio.md  Documentacion_Tecnica.md  Gameloop.md  Manual_de_Usuario.md  ProtocoloCliente.md  ProtocoloServidor.md
editor/: CMakeLists.txt  barras_stats.cpp  barras_stats.h  catalogo_editor.cpp  catalogo_editor.h  dialogo_confirmar.cpp  dialogo_confirmar.h  dialogo_inicio.cpp  dialogo_inicio.h  dialogo_nombre_mapa.cpp  dialogo_nombre_mapa.h  editor_mapa.cpp  editor_mapa.h  editor_window.cpp  editor_window.h  main.cpp  mapaCreator.h  mapa_canvas.cpp  mapa_canvas.h  panel_elementos.cpp  panel_elementos.h  recursos.qrc
editor/config/: criaturas_info.toml
minutas/: minuta_sabado06junio2026.md  minuta_sabado13junio2026.md  minuta_sabado20junio2026.md
server/: CMakeLists.txt  enviador.cpp  enviador.h  main.cpp  recibidor.cpp  recibidor.h  server_.cpp  server_.h
server/aceptador/: aceptador.cpp  aceptador.h
server/cliente/: cliente.cpp  cliente.h  emisor.cpp  emisor.h  receptor.cpp  receptor.h
server/game/: aleatorio.h  clan.cpp  clan.h  criatura.cpp  criatura.h  inventario.h  items.h  juego.cpp  juego.h  jugador.cpp  jugador.h  registro_servidor.cpp  registro_servidor.h
server/gameloop/: comando_cliente.h  evento_sesion.h  gameloop.cpp  gameloop.h  mensaje_salida.h  monitor_clientes.cpp  monitor_clientes.h  traductor_protocolo.cpp  traductor_protocolo.h
server/persistencia/: escritor_jugadores.cpp  escritor_jugadores.h  indice_jugadores.cpp  indice_jugadores.h  lector_jugadores.cpp  lector_jugadores.h  serializador_jugador.cpp  serializador_jugador.h
server/protocolo/: protocolo_servidor.cpp  protocolo_servidor.h
tests/: CMakeLists.txt  foo.cpp  test_comandos.cpp  test_errores.cpp  test_mazmorra.cpp  test_mensajes.cpp  test_utils.cpp  test_utils.h
(+48 files in other folders)
